[package]
name = "bela"
version = "0.1.0"
edition = "2018"
autoexamples = false

[dependencies]
nix = "0.22"

[dependencies.bela-sys]
git = "https://github.com/andrewcsmith/bela-sys.git"

[features]
static = [ "bela-sys/static" ]
midi = [ "bela-sys/midi" ]

[[example]]
name = "hello"

# [[example]]
# name = "digital"

[[example]]
name = "auxiliary_task"

# [[example]]
# name = "sample"

[[example]]
name = "midi"
required-features = [ "midi" ]
