[package]
name = "bela"
version = "0.1.0"
edition = "2018"

[dependencies]
nix = "0.22"

[dependencies.bela-sys]
git = "https://github.com/andrewcsmith/bela-sys.git"

[dev-dependencies]
dasp = { version = "0.11.0", features = [ "signal", "slice" ] }

[features]
static = [ "bela-sys/static" ]
midi = [ "bela-sys/midi" ]

[[example]]
name = "midi"
required-features = [ "midi" ]
